--- a/ConsumerService/pom.xml
+++ b/ConsumerService/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dummy.service</groupId>
-	<artifactId>dummyService</artifactId>
+	<groupId>com.consumer.service</groupId>
+	<artifactId>consumerService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dummyService</name>
+	<name>consumerService</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.1.4</version>
+			<version>3.1.5</version>
 		</dependency>
 
 		<dependency>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>bson</artifactId>
-			<version>4.6.1</version>
+			<version>4.7.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
